@@ -122,7 +122,7 @@ class ProtImodBase(ProtTomoImportFiles, EMProtocol, ProtTomoBase):
                 # Check if rotation angle is greater than 45º. If so,
                 # swap x and y dimensions to adapt output image sizes to
                 # the final sample disposition.
-                if rotationAngleAvg > 45 or rotationAngleAvg < -45:
+                if 45 < abs(rotationAngleAvg) < 135:
                     paramsAlignment.update({
                         'size': "%d,%d" % (firstItem.getYDim(), firstItem.getXDim())
                     })
