@@ -1,4 +1,7 @@
 3.1:
+- fix rotation angle range for swapping x/y for newstack
+- do not copy objId for apply TM protocol when excluding views
+- fix output size in apply TM protocol
 - fix wrong output file index numbers in the exclude views protocol
 - fix gold erasing option in the fid. alignment protocol
 - fix generating ctf output; hide some params from manual ctf protocol; do not run autofit for manual protocol
